Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -617,19 +617,7 @@
             transition: all 0.3s var(--animation-primary);
         }
 
-        .search-container.sticky {
-            position: fixed;
-            top: 85px;
-            left: 50%;
-            transform: translateX(-50%);
-            z-index: 999;
-            background: var(--glass);
-            backdrop-filter: blur(20px);
-            padding: 15px 20px;
-            border-radius: 20px;
-            border: 1px solid var(--glass-border);
-            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
-        }
+        /* Styles sticky supprimés - la barre de recherche suit maintenant le contenu */
 
         .search-box {
             display: flex;
